--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "version:minor": "yarn version --minor",
     "version:major": "yarn version --major",
     "preversion": "yarn lint && yarn test",
-    "prepublishOnly": "yarn build"
+    "prepublishOnly": "yarn build",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
   },
   "files": [
     "dist"
@@ -26,21 +28,36 @@
     }
   },
   "devDependencies": {
+    "@babel/core": "^7.12.3",
+    "@storybook/addon-actions": "^6.0.26",
+    "@storybook/addon-essentials": "^6.0.26",
+    "@storybook/addon-links": "^6.0.26",
+    "@storybook/cli": "^6.0.26",
+    "@storybook/react": "^6.0.26",
     "@types/jest": "^25.2.1",
     "@types/node": "^12.12.21",
     "@typescript-eslint/eslint-plugin": "^3.0.2",
     "@typescript-eslint/parser": "^3.0.2",
+    "babel-loader": "^8.1.0",
     "eslint": "^7.1.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-prettier": "^3.1.3",
     "husky": "^4.2.5",
     "jest": "^25.3.0",
     "prettier": "^2.0.5",
+    "react-is": "^16.13.1",
     "ts-jest": "^25.4.0",
     "typescript": "^3.8.3"
   },
   "dependencies": {
+    "@emotion/core": "^10.0.35",
+    "@emotion/styled": "^10.0.27",
     "@types/react": "^16.9.52",
-    "react": "^16.13.1"
+    "react": "^16.13.1",
+    "react-dom": "^16.14.0"
+  },
+  "resolutions": {
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1"
   }
 }
