--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "build": "rimraf dist && tsc",
     "test": "jest --forceExit --detectOpenHandles --maxWorkers=1 --passWithNoTests",
     "test:coverage": "jest --coverage --passWithNoTests",
-    "lint": "eslint ./**/*.{js,ts,jsx,tsx}",
-    "lint:fix": "eslint ./**/*.{js,ts,jsx,tsx} --fix",
+    "lint": "eslint --ext .tsx,.ts src/",
+    "lint:fix": "eslint --ext .tsx,.ts src/ --fix",
     "version:prerelease": "yarn version --prerelease",
     "version:patch": "yarn version --patch",
     "version:minor": "yarn version --minor",
@@ -41,7 +41,10 @@
     "babel-loader": "^8.1.0",
     "eslint": "^7.1.0",
     "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-prettier": "^3.1.3",
+    "eslint-plugin-react": "^7.21.4",
+    "eslint-plugin-react-hooks": "^4.1.2",
     "husky": "^4.2.5",
     "jest": "^25.3.0",
     "prettier": "^2.0.5",
