--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "wrapper",
-  "version": "0.0.0",
+  "name": "boxi",
+  "version": "0.9.0",
   "description": "",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -55,7 +55,7 @@
   "dependencies": {
     "@emotion/core": "^10.0.35",
     "@emotion/styled": "^10.0.27",
-    "@types/react": "^16.9.52",
+    "@types/react": "^16.9.53",
     "react": "^17.0.0",
     "react-dom": "^17.0.0"
   }
